# AI-Call-Assistant

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  switch-env.sh
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0ad503581dd8_added_calendar_booking_link_column.py  eb633aed67c1_initial.py
backend/app/: database.py  logging_config.py  main.py
backend/app/core/: __init__.py  config.py
backend/app/middleware/: security.py
backend/app/models/: calander.py  call.py  login.py  phone_number.py  user.py
backend/app/routes/: auth_routes.py  call_routes.py  health_status.py  phone_number_routes.py  sms_routes.py  user_routes.py  verify_routes.py  ws_routes.py
backend/app/services/: __init__.py  auth_service.py  calendar_service.py  open_ai_service.py  twilio_service.py
backend/app/sessions/: user_sessions.py
backend/app/utils/: calendar_events.py
backend/tests/: README.md  conftest.py  test_call_flow.py  test_call_flow_real_db.py
backend/tests/data/: README.md  init_test_db.py  populate_test_db.sql  setup_test_db.sh
backend/tests/stress_tests/: README.md  __init__.py  conftest.py  run_server_tests.py  run_tests.py  server_test_framework.py  test_server_concurrent_calls.py
diagrams/: call_flow.mmd  system_design.mmd
frontend/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
terraform/: apprunner.tf  cloudfront.tf  ecr.tf  instructions.md  providers.tf  rds.tf  s3.tf  secrets.tf  (+3 more)
(+27 files in other folders)
