[tool.poetry]
name = "ai-call-assistant"
version = "0.1.0"
description = ""
authors = ["sarthakkhandelwal7 <sarthak.k7189@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.115.6"}
unicorn = "^2.1.1"
twilio = "^9.4.1"
openai = "^1.58.1"
google-auth = "^2.37.0"
google-auth-oauthlib = "^1.2.1"
google-auth-httplib2 = "^0.2.0"
requests = "^2.32.3"
websockets = "^14.1"
google-api-python-client = "^2.157.0"
pytz = "^2024.2"
sqlalchemy = "^2.0.37"
alembic = "^1.14.1"
psycopg2-binary = "^2.9.10"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
wave = "^0.0.2"
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
